--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -12,33 +12,33 @@
 	{{ parent() }}
 
 	<!-- Start of Async Drift Code -->
-<script async>
-"use strict";
+	<script defer>
+	"use strict";
 
-!function() {
-  var t = window.driftt = window.drift = window.driftt || [];
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
-    t.factory = function(e) {
-      return function() {
-        var n = Array.prototype.slice.call(arguments);
-        return n.unshift(e), t.push(n), t;
-      };
-    }, t.methods.forEach(function(e) {
-      t[e] = t.factory(e);
-    }), t.load = function(t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-      var i = document.getElementsByTagName("script")[0];
-      i.parentNode.insertBefore(o, i);
-    };
-  }
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('beeybihz4kn4');
-</script>
-<!-- End of Async Drift Code -->
+	!function() {
+	var t = window.driftt = window.drift = window.driftt || [];
+	if (!t.init) {
+		if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+		t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
+		t.factory = function(e) {
+		return function() {
+			var n = Array.prototype.slice.call(arguments);
+			return n.unshift(e), t.push(n), t;
+		};
+		}, t.methods.forEach(function(e) {
+		t[e] = t.factory(e);
+		}), t.load = function(t) {
+		var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+		o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+		var i = document.getElementsByTagName("script")[0];
+		i.parentNode.insertBefore(o, i);
+		};
+	}
+	}();
+	drift.SNIPPET_VERSION = '0.3.1';
+	drift.load('beeybihz4kn4');
+	</script>
+	<!-- End of Async Drift Code -->
 {% endblock %}
 
 {% block body %}
@@ -121,7 +121,7 @@ drift.load('beeybihz4kn4');
 																				 'jpeg': 'img/crillon.jpg'
 																			   },
 																	'default': 'img/crillon.jpg',
-																	'lazyload': false,
+																	'lazyload': true,
 																	'alt': 'Trio jazz manouche à l\'Hôtel Le Crillon',
 																	'title': 'Trio jazz manouche à l\'Hôtel Le Crillon',
 																	'class': 'img-fluid' } %}
@@ -137,7 +137,7 @@ drift.load('beeybihz4kn4');
 																				 'jpeg': 'img/swingcocktail2.jpg'
 																			   },
 																	'default': 'img/swingcocktail2.jpg',
-																	'lazyload': false,
+																	'lazyload': true,
 																	'alt': 'Trio jazz avec chanteur pour vos événements',
 																	'title': 'Trio jazz avec chanteur pour vos événements',
 																	'class': 'img-fluid' } %}
