--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -575,3 +575,43 @@ a:hover { color: #ff841c; text-decoration: none; }
 /* purgecss start ignore */
 #contact .form-group:first-child { display: none; }
 /* purgecss end ignore */
+
+.contact-cta {
+	margin: 25px 0;
+	padding: 15px 0;
+
+	border-top: 2px solid #ff841c;
+	border-bottom: 2px solid #ff841c;
+
+	&__title { 
+		width: 100%;
+		display: block;
+		text-align: center; 
+	}
+	
+	.btn {
+		padding: 30px;
+		border: 1px solid transparent;
+
+		margin-bottom: 10px;
+
+		@media (min-width: 992px) {
+			margin-bottom: 0;
+		}
+
+		:hover { border: 1px solid #ff841c; }
+	}
+}
+
+.partners {
+	img {
+		@media (max-width: 768px) {
+			margin-bottom: 10px;
+			margin-left: 0 !important;
+			margin-right: 0 !important;
+			
+			max-width: 49% !important;
+			display: inline-block !important;	
+		}
+	}
+}
