--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -6,47 +6,18 @@
 	<meta name="description" content="Vous êtes à la recherche d'un accordéoniste pour animer votre soirée ? Seul ou en groupe, découvrez mes formules sur mesure.">
 {% endblock %}
 
-{% block heading %}
-	{{ parent() }}
-
-	<!-- Start of Async Drift Code -->
-<script>
-"use strict";
-
-!function() {
-  var t = window.driftt = window.drift = window.driftt || [];
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
-    t.factory = function(e) {
-      return function() {
-        var n = Array.prototype.slice.call(arguments);
-        return n.unshift(e), t.push(n), t;
-      };
-    }, t.methods.forEach(function(e) {
-      t[e] = t.factory(e);
-    }), t.load = function(t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-      var i = document.getElementsByTagName("script")[0];
-      i.parentNode.insertBefore(o, i);
-    };
-  }
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('beeybihz4kn4');
-</script>
-<!-- End of Async Drift Code -->
-{% endblock %}
-
 {% block body %}
-	<style type="text/css">
-
-	</style>
-
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/solo-anims-paris.jpg" alt="" class="flash-item__background" style="top: -330px;">
+			{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/solo-anims-paris.webp',
+																				 'jpeg': 'img/solo-anims-paris.jpg'
+																			   },
+																	'default': 'img/solo-anims-paris.jpg',
+																	'lazyload': false,
+																	'alt': 'Accordéoniste pour votre soirée et vos événements',
+																	'title': 'Accordéoniste pour votre soirée et vos événements',
+																	'class': 'flash-item__background',
+																	'style': 'top: -330px;' } %}
 		</div>
 	</section>
 
@@ -55,6 +26,8 @@ drift.load('beeybihz4kn4');
 	<section class="content-section bg--blank page-section">
 		<div class="container">
 			<h1 class="section-title">Accordéoniste pour animer votre soirée</h1>
+
+			{{ include('utils/contact-cta.html.twig') }}
 
 			<div class="row">
 				<div class="col-md-6">
@@ -68,16 +41,7 @@ drift.load('beeybihz4kn4');
 				</div>
 
 				<div class="col-md-6">
-					<p style="margin-bottom: 15px;">
-						<a href="{{ path('contact') }}" class="btn btn-primary">
-							Une question ? Un devis ? Contactez-moi ! <br>
-							dutheil.jeremy@gmail.com / 06.85.38.22.16
-						</a>
-					</p>
-
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CjtwtX3Sd8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
+					{% include 'utils/youtubelazy.html.twig' with { 'youtubeId': 'CjtwtX3Sd8Q', 'title': 'Aux Champs Elysées - Accordéoniste pour votre soirée' } %}
 				</div>
 			</div>
 
@@ -101,7 +65,15 @@ drift.load('beeybihz4kn4');
 
 			<div class="row">
 				<div class="col-md-6">
-					<img class="img-fluid" src="img/accordeoniste_soiree.JPG" alt="Accordéoniste pour vos soirées" style="margin-bottom: 15px;">
+					{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/accordeoniste_soiree.webp',
+																				 'jpeg': 'img/accordeoniste_soiree.JPG'
+																			   },
+																	'default': 'img/accordeoniste_soiree.JPG',
+																	'lazyload': true,
+																	'alt': 'Accordéoniste pour votre soirée et vos événements',
+																	'title': 'Accordéoniste pour votre soirée et vos événements',
+																	'class': 'img-fluid',
+																	'style': 'margin-bottom: 15px;' } %}
 				</div>
 
 				<div class="col-md-6">
@@ -113,22 +85,22 @@ drift.load('beeybihz4kn4');
 
 			<h3 class="section-title section-title--smaller">Accordéon jazz : classe et élégance</h3>
 
-			<p>
-				Vous cherchez un accordéoniste qui sortira des sentiers battus, proposant une musique chic et raffinée. Pour une musique d'ambiance lors de votre soirée, le jazz à l'accordéon est un choix idéal ! Moins coûteux à déplacer qu'un piano, plus original et pourtant tout aussi intéressant. Au son des standards de <i>jazz</i>, de Duke Ellington à Charlie Parker, laissez vous séduire par un son feutré et tout en retenue.
-			</p>
-
-			<p>
-				Discret, l'accordéon jazz apportera à votre soirée une touche de classe et d'élégance, tout en surprenant vos invités ! Cette formule est particulièrement adaptée pour le cocktail de votre entreprise, un dîner spécial dans votre restaurant ou le vin d'honneur de votre mariage... Loin des clichés de l'instrument, un <strong>accordéoniste jazz</strong> plaira à toutes les générations !
-			</p>
-
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
-				<div class="col-md-6">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-h2oJAjzAtg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
+				<div class="col-md-6 order-md-2" style="margin-bottom: 15px;">
+					{% include 'utils/youtubelazy.html.twig' with { 'youtubeId': '-h2oJAjzAtg', 'title': 'Accordéon jazz - Sunny Side of the Street' } %}
 				</div>
 
-				<div class="col-md-6">
+				<div class="col-sm-12 order-md-1">
+					<p>
+						Vous cherchez un accordéoniste qui sortira des sentiers battus, proposant une musique chic et raffinée. Pour une musique d'ambiance lors de votre soirée, le jazz à l'accordéon est un choix idéal ! Moins coûteux à déplacer qu'un piano, plus original et pourtant tout aussi intéressant. Au son des standards de <i>jazz</i>, de Duke Ellington à Charlie Parker, laissez vous séduire par un son feutré et tout en retenue.
+					</p>
+
+					<p>
+						Discret, l'accordéon jazz apportera à votre soirée une touche de classe et d'élégance, tout en surprenant vos invités ! Cette formule est particulièrement adaptée pour le cocktail de votre entreprise, un dîner spécial dans votre restaurant ou le vin d'honneur de votre mariage... Loin des clichés de l'instrument, un <strong>accordéoniste jazz</strong> plaira à toutes les générations !
+					</p>
+				</div>
+
+				<div class="col-md-6 order-md-3">
 					<p>
 						<strong>Accordéon Jazz - Quelques titres pour l'exemple</strong>
 					</p>
@@ -178,20 +150,25 @@ drift.load('beeybihz4kn4');
 			</div>
 
 
-
 			<h3 class="section-title section-title--smaller">Guinguette et Chanson française : souvenirs participatifs</h3>
 
-			<p>
-				Instrument roi des années 30, l'accordéon peut à lui seul recréer une ambiance "guinguette" et "rétro" pendant votre soirée. Entre valses <i>swing</i> et grands standards de la chanson française (Brel, Aznavour, Piaf, ...), vous verrez une joyeuse nostalgie s'emparer de vos invités. Aujourd'hui, ce genre de soirées "rétro" (pourquoi pas aussi s'habiller comme à l'époque ?) est très tendance, et la guinguette revient en force. Vous pouvez décider d'en faire le thème principal de votre soirée, ou pourquoi pas simplement réserver un petit espace hors du temps quelque part sur le lieu de l'événement.
-			</p>
-
-			<p>
-				Un <strong>accordéoniste à votre soirée</strong> pourra alors tour à tour vous faire danser (valses swing, standards musette, ...), chanter (La Foule, Champs Elysées, Vesoul, ...) ou encore découvrir de nouveaux morceaux dans le style que vous n'aviez peut-être jamais entendu ! <br>
-				Cette formule sera particulièrement adaptée pour un anniversaire, une fête entre amis ou un repas convivial.
-			</p>
-
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
-				<div class="col-md-6">
+				<div class="col-md-6 order-md-3" style="margin-bottom: 15px;">
+					{% include 'utils/youtubelazy.html.twig' with { 'youtubeId': 'oSiWQ_thsn8', 'title': 'Accordéon guinguette - Java Manouche (Jo Privat)' } %}
+				</div>
+
+				<div class="col-sm-12 order-md-1">
+					<p>
+						Instrument roi des années 30, l'accordéon peut à lui seul recréer une ambiance "guinguette" et "rétro" pendant votre soirée. Entre valses <i>swing</i> et grands standards de la chanson française (Brel, Aznavour, Piaf, ...), vous verrez une joyeuse nostalgie s'emparer de vos invités. Aujourd'hui, ce genre de soirées "rétro" (pourquoi pas aussi s'habiller comme à l'époque ?) est très tendance, et la guinguette revient en force. Vous pouvez décider d'en faire le thème principal de votre soirée, ou pourquoi pas simplement réserver un petit espace hors du temps quelque part sur le lieu de l'événement.
+					</p>
+
+					<p>
+						Un <strong>accordéoniste à votre soirée</strong> pourra alors tour à tour vous faire danser (valses swing, standards musette, ...), chanter (La Foule, Champs Elysées, Vesoul, ...) ou encore découvrir de nouveaux morceaux dans le style que vous n'aviez peut-être jamais entendu ! <br>
+						Cette formule sera particulièrement adaptée pour un anniversaire, une fête entre amis ou un repas convivial.
+					</p>
+				</div>
+
+				<div class="col-md-6 order-md-2">
 					<p>
 						<strong>Accordéon guinguette : quelques titres pour l'exemple</strong>
 					</p>
@@ -246,12 +223,6 @@ drift.load('beeybihz4kn4');
 						</li>
 					</ul>
 				</div>
-
-				<div class="col-md-6">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oSiWQ_thsn8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-				</div>
 			</div>
 
 			<h3 class="section-title section-title--smaller">Musique du monde : à la découverte d'un répertoire</h3>
@@ -262,25 +233,31 @@ drift.load('beeybihz4kn4');
 
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
+					{% include 'utils/youtubelazy.html.twig' with { 'youtubeId': '8eY4FsHf7g0', 'title': 'Carnevale (R. Ruggieri)' } %}
 				</div>
 			</div>
 
 			<h3 class="section-title section-title--smaller">Un exemple de répertoire à l'accordéon pour votre soirée</h3>
 
 			<p>
-				Vous êtes à la recherche d'un accordéoniste, voici quelques titres auxquels vous pouvez vous attendre lors de votre soirée :
+				Vous êtes à la recherche d'un accordéoniste, voici ci-dessous quelques titres auxquels vous pouvez vous attendre lors de votre soirée. Bien évidemment, nous discuterons ensemble du répertoire en amont de la prestation, afin d'adapter au mieux les morceaux à vos envies et à celles de vos invités. 
 			</p>
 
 			<div class="row">
 				<div class="col-sm-6">
-					<img src="{{ asset('img/anim.jpg') }}" alt="Accordéoniste en soirée" title="Jérémy Dutheil, accordéoniste pour soirées" class="img-fluid page-section__img" style="max-width: 50%;">
+					{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/champs.webp',
+																				 'jpeg': 'img/champs.jpg'
+																			   },
+																	'default': 'img/champs.jpg',
+																	'lazyload': true,
+																	'alt': 'Accordéoniste pour votre soirée et vos événements',
+																	'title': 'Accordéoniste pour votre soirée et vos événements',
+																	'class': 'img-fluid page-section__img d-none d-sm-block',
+																	'style': '' } %}
 				</div>
 
 				<div class="col-sm-6">
-					<ul>
+					<ul>	
 						<li>
 							Les feuilles mortes
 						</li>
@@ -323,6 +300,18 @@ drift.load('beeybihz4kn4');
 
 						<li>
 							Les copains d'abord
+						</li>
+
+						<li>
+							Un mauvais garçon
+						</li>
+
+						<li>
+							La Javanaise
+						</li>
+
+						<li>
+							Les Yeux Noirs
 						</li>
 
 						<li>
@@ -370,10 +359,36 @@ drift.load('beeybihz4kn4');
 				Lors d'un cocktail d'entreprise, je préconise un mélange des genres : quelques airs de chanson française connus (instrumental à l'accordéon), mais également du jazz et swing qui donneront une touche très classe. Ambiance années 50 garantie !
 			</p>
 
-			<p>
-				<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre projet : dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
-			</p>
+			{{ include('utils/contact-cta.html.twig') }}
 		</div>
 	</section>
 
+	<!-- Start of Async Drift Code -->
+	<script defer>
+	"use strict";
+
+	!function() {
+	var t = window.driftt = window.drift = window.driftt || [];
+	if (!t.init) {
+		if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+		t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
+		t.factory = function(e) {
+		return function() {
+			var n = Array.prototype.slice.call(arguments);
+			return n.unshift(e), t.push(n), t;
+		};
+		}, t.methods.forEach(function(e) {
+		t[e] = t.factory(e);
+		}), t.load = function(t) {
+		var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+		o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+		var i = document.getElementsByTagName("script")[0];
+		i.parentNode.insertBefore(o, i);
+		};
+	}
+	}();
+	drift.SNIPPET_VERSION = '0.3.1';
+	drift.load('beeybihz4kn4');
+	</script>
+	<!-- End of Async Drift Code -->
 {% endblock %}
