--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -11,10 +11,15 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/manouchebg.jpg" alt="Accordéoniste et musiciens pour événements (soirées, mariages, cocktails)" class="flash-item__background flash-item__background--groupes" style="top: -30%">
-
-			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-
+			{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/manouchebg.webp',
+																				 'jpeg': 'img/manouchebg.jpg'
+																			   },
+																	'default': 'img/manouchebg.jpg',
+																	'lazyload': false,
+																	'alt': 'Accordéoniste et musiciens pour événements (soirées, mariages, cocktails)',
+																	'title': 'Accordéoniste et musiciens pour événements (soirées, mariages, cocktails)',
+																	'class': 'flash-item__background flash-item__background--groupes',
+																	'style': 'top: -30%;' } %}
 		</div>
 	</section>
 
@@ -22,11 +27,19 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Événementiel et animations musicales</h1>
+			<h1 class="section-title">Animations musicales <small>Événementiel et soirées privées</small></h1>
 
-			<p>
-				<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre projet : dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
-			</p>
+			{{ include('utils/contact-cta.html.twig') }}
+
+			{% include 'utils/picture.html.twig' with { 'sources': { 'webp': 'img/accordeoniste_soiree.webp',
+																				 'jpeg': 'img/accordeoniste_soiree.JPG'
+																			   },
+																	'default': 'img/accordeoniste_soiree.JPG',
+																	'lazyload': true,
+																	'alt': 'Accordéoniste pour votre soirée et vos événements',
+																	'title': 'Accordéoniste pour votre soirée et vos événements',
+																	'class': 'img-fluid d-md-none',
+																	'style': 'margin-bottom: 15px;' } %}
 
 			<p>
 				Accordéoniste professionnel, Jérémy Dutheil vous propose des formules sur mesures pour <strong>l'animation musicale</strong> de votre  événement : cocktail, fête, vin d'honneur, <a href="{{ path('entreprise') }}">soirée d'entreprise</a>. Seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement. Jérémy évolue plus particulièrement dans les styles musicaux <strong>jazz</strong> (manouche) et <strong>chanson française</strong>.
@@ -266,6 +279,7 @@
 
 			{% include 'partners.html.twig' %}
 
+			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
